--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,8 +5,8 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//buefy
+@import 'buefy';
 
 .navbar-laravel {
   background-color: #fff;
