vuesax 追加とscss、mixin

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,21 @@
-
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
-@import 'variables';
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 //buefy
-@import 'buefy';
+@import "buefy";
+
+// Variables
+@import "variables";
+
+//mixin
+@import "mixin/mixin";
+
+//common
+@import "common";
+
+@import "layout/header";
 
 .navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
