ログイン周り

--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -144,3 +144,9 @@ ul, ol {
   .fade-enter, .fade-leave-to {
     opacity: 0;
   }
+
+
+  //vue-sax 
+  .vs-input--placeholder {
+      top: -3px!important;
+  }
