--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -146,7 +146,10 @@ ul, ol {
   }
 
 
-  //vue-sax 
+  //vue-sax
   .vs-input--placeholder {
       top: -3px!important;
+  }
+  .vs-button {
+    width: 110px!important;
   }
